--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -4,7 +4,6 @@ bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
 bindd = SUPER SHIFT, B, Browser, exec, omarchy-launch-browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, omarchy-launch-browser --private
 bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
-bindd = SUPER SHIFT, C, Chat, exec, omarchy-launch-or-focus discord
 bindd = SUPER SHIFT, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 # bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
@@ -15,6 +14,7 @@ bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
 bindd = SUPER SHIFT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
+bindd = SUPER SHIFT, C, Discord, exec, omarchy-launch-webapp "https://discord.com/channels/@me"
 # bindd = SUPER SHIFT ALT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
 # bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
 # bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
