--- a/hypr/.config/hypr/monitors.conf
+++ b/hypr/.config/hypr/monitors.conf
@@ -11,16 +11,15 @@
 # monitor = , preferred, auto, 1.6
 
 # Straight 1x setup for low-resolution displays like 1080p or 1440p
-# env = GDK_SCALE, 1
+env = GDK_SCALE, 1
 # monitor = , preferred, auto, 1
 
 # Example for Framework 13 w/ 6K XDR Apple display
 # monitor = DP-5, 6016x3384@60, auto, 2
 # monitor = eDP-1, 2880x1920@120, auto, 2
 
-# Setup for BenQ MOBIUZ EX2510S monitor
-env = GDK_SCALE, 1
+# External monitor
 monitor = DP-1, 1920x1080@165, auto, 1
 
-# Disable laptop monitor
-monitor = eDP-1, disable
+# Laptop monitor
+monitor = eDP-1, 1920x1080@144, auto, 1
